libs/ui/dialogs/KisAsyncAnimationFramesSaveDialog.cpp
@@ -58,11 +58,11 @@ struct KisAsyncAnimationFramesSaveDialog::Private {
 KisAsyncAnimationFramesSaveDialog::KisAsyncAnimationFramesSaveDialog(KisImageSP originalImage,
                                                                      const KisTimeSpan &range,
                                                                      const QString &baseFilename,
-                                                                     int sequenceNumberingOffset,
+                                                                     int startNumberingAt,
                                                                      bool onlyNeedsUniqueFrames,
                                                                      KisPropertiesConfigurationSP exportConfiguration)
     : KisAsyncAnimationRenderDialogBase(i18n("Saving frames..."), originalImage, 0),
-      m_d(new Private(originalImage, range, baseFilename, sequenceNumberingOffset, onlyNeedsUniqueFrames, exportConfiguration))
+      m_d(new Private(originalImage, range, baseFilename, qMax(startNumberingAt - range.start(), range.start() * -1), onlyNeedsUniqueFrames, exportConfiguration))
 {
 
 
@@ -89,19 +89,6 @@ KisAsyncAnimationRenderDialogBase::Result KisAsyncAnimationFramesSaveDialog::reg
         if (batchMode()) {
             return RenderFailed;
         }
-
-        QStringList filesWithinRange;
-        const int numberOfDigits = 4;
-        Q_FOREACH(const QString &filename, filesList) {
-            // Counting based on suffix, since prefix may include the path while filename doesn't
-            int digitsPosition = filename.length() - m_d->filenameSuffix.length() - numberOfDigits;
-            int fileNumber = filename.midRef(digitsPosition, numberOfDigits).toInt();
-            auto frameNumber = fileNumber - m_d->sequenceNumberingOffset;
-            if (m_d->range.contains(frameNumber)) {
-                filesWithinRange.append(filename);
-            }
-        }
-        filesList = filesWithinRange;
 
         QStringList truncatedList = filesList;
 
@@ -214,7 +201,7 @@ QString KisAsyncAnimationFramesSaveDialog::savedFilesMaskWildcard() const
     return m_d->filenamePrefix + "????" + m_d->filenameSuffix;
 }
 
-QStringList KisAsyncAnimationFramesSaveDialog::savedFilePaths() const
+QStringList KisAsyncAnimationFramesSaveDialog::savedFiles() const
 {
     QStringList files;
 
@@ -222,18 +209,23 @@ QStringList KisAsyncAnimationFramesSaveDialog::savedFilePaths() const
         const int num = m_d->sequenceNumberingOffset + i;
         QString name = QString("%1").arg(num, 4, 10, QChar('0'));
         name = m_d->filenamePrefix + name + m_d->filenameSuffix;
-        files.append(name);
+        files.append(QFileInfo(name).fileName());
     }
 
     return files;
 }
 
-QStringList KisAsyncAnimationFramesSaveDialog::savedFiles() const
+QStringList KisAsyncAnimationFramesSaveDialog::savedUniqueFiles() const
 {
-    QStringList files = savedFilePaths();
+    QStringList files;
 
-    for (int i = 0; i < files.count(); i++) {
-        files[i] = QFileInfo(files[i]).fileName();
+    const QList<int> frames = calcDirtyFrames();
+
+    Q_FOREACH (int frame, frames) {
+        const int num = m_d->sequenceNumberingOffset + frame;
+        QString name = QString("%1").arg(num, 4, 10, QChar('0'));
+        name = m_d->filenamePrefix + name + m_d->filenameSuffix;
+        files.append(QFileInfo(name).fileName());
     }
 
     return files;
